# cvat

./: .build_version  .gitignore  CMakeLists.txt  README.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json  reinstall-cmake.sh
.github/workflows/: build.yml  test.yml
cmake/: project_setting.cmake  vcpkg_env.cmake
deps_party/: add_deps.cmake
modules/debugger/: CMakeLists.txt
modules/debugger/include/: debugger_app.hpp
modules/debugger/interface/: debugger.h  debugger_abi.h
modules/debugger/source/: app_impl.cpp  app_impl.hpp  debugger_app.cpp
modules/frame_source/: CMakeLists.txt
modules/frame_source/include/: frame_source.hpp
modules/frame_source/interface/: frame_source_abi.h
modules/frame_source/source/: frame_source.cpp
modules/std_extension/: CMakeLists.txt
modules/std_extension/include/: exec.hpp  ptr.hpp  self_releasing_async.hpp
samples/: CMakeLists.txt
samples/debugger/: CMakeLists.txt  main.cpp
samples/std_extension/: CMakeLists.txt  main.cpp
